{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 4,
  "lineage": "161341a8-bbd2-a269-5a80-1344e7e456f0",
  "resources": [
    {
      "module": "module.postgresSQL",
      "mode": "managed",
      "type": "aws_instance",
      "name": "database_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:116981807600:instance/i-038d00c366f708c6d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c35132656d2e2a3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-038d00c366f708c6d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "otms",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-063b2c7286d1bfa48",
            "private_dns": "ip-192-168-0-53.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c35132656d2e2a3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-03e5e1f3d11b534b2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c30f9befdd1cd274",
            "tags": {
              "Environment": "dev",
              "Name": "dev-postgresSql-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-postgresSql-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03e5e1f3d11b534b2"
            ]
          },
          "dependencies": [
            "module.postgresSQL.aws_security_group.security_group",
            "module.postgresSQL.data.terraform_remote_state.attendance_state",
            "module.postgresSQL.data.terraform_remote_state.employee_state",
            "module.postgresSQL.data.terraform_remote_state.network_skeleton_state",
            "module.postgresSQL.data.terraform_remote_state.salary_state"
          ]
        }
      ]
    },
    {
      "module": "module.postgresSQL",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:116981807600:targetgroup/attendance-tg/d560aff908dde629",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:116981807600:listener-rule/app/tf-lb-20250125145417345600000005/2752c11d3d492054/5e9b442fee14ba6c/4ad719edfb793e95",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/v1/attendance/*",
                      "/apidocs/*",
                      "/apispec_1.json",
                      "/flasgger_static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:116981807600:listener-rule/app/tf-lb-20250125145417345600000005/2752c11d3d492054/5e9b442fee14ba6c/4ad719edfb793e95",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:116981807600:listener/app/tf-lb-20250125145417345600000005/2752c11d3d492054/5e9b442fee14ba6c",
            "priority": 4,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.postgresSQL_state",
            "module.postgresSQL.data.terraform_remote_state.asg_state"
          ]
        }
      ]
    },
    {
      "module": "module.postgresSQL",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:116981807600:security-group/sg-03e5e1f3d11b534b2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e5e1f3d11b534b2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from attendance on port 8080",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04f1aae33bb4a1810"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20250125161939346000000001",
            "name_prefix": "terraform-",
            "owner_id": "116981807600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-postgresSql-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-postgresSql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b6b8c518b526a851"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.postgresSQL.data.terraform_remote_state.attendance_state",
            "module.postgresSQL.data.terraform_remote_state.employee_state",
            "module.postgresSQL.data.terraform_remote_state.network_skeleton_state",
            "module.postgresSQL.data.terraform_remote_state.salary_state"
          ]
        }
      ]
    }
  ]
}